Memorable names (#110)
GetName was changed to GetCardId accordingly.
