# gui/swagger.yaml
@@ -199,6 +199,46 @@ paths:
       type: string
       description: sessionID of connected card
 
+  /cards/{sessionID}/name:
+    get:
+      tags:
+      - "sessions"
+      responses:
+        "500":
+          description: "internal error retrieving connection status"
+        "200":
+          description: "session name is returned"
+    parameters:
+      - in: path
+        required: true
+        name: sessionID
+        type: string
+        description: sessionID of connected card
+
+  /cards/{sessionID}/name/create:
+    post:
+      tags:
+      - "sessions"
+      responses:
+        "500":
+          description: "internal error retrieving connection status"
+        "200":
+          description: "session name is created"
+    parameters:
+      - in: path
+        required: true
+        name: sessionID
+        type: string
+        description: sessionID of connected card
+      - in: "body"
+        name: "body"
+        description: "name of the session to be renammed"
+        required: true
+        schema:
+          type: object
+          properties:
+            name:
+              type: "string"
   /cards/{sessionID}/phonon/{phononIndex}/setDescriptor:
     post:
       tags:
